Make kcombobox minimumsize bigger if the lineedit is a KLineEdit and it's editable otherwise looks ugly because the clear button will cover the last 2/3 letters of the biggest entry

Nobody opposed for a week.

BUG: 163918

svn path=/trunk/KDE/kdelibs/; revision=822657